# trading-bot-showcase

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  main.py  pyproject.toml  run_backtest.bat  run_data_download.bat  run_demo.bat  run_tests.bat
.github/workflows/: tests.yml
backtest/: __init__.py  engine.py  metrics.py  reporter.py
cli/: __init__.py  commands.py
config/: __init__.py  settings.py  trading_config.yaml
core/: __init__.py  enums.py  exceptions.py  logger.py  models.py  utils.py
data/: __init__.py  cache.py  downloader.py  fetcher.py  historical.py  provider.py  validator.py
deploy/: trading-bot.service.example
exchange/: __init__.py  base.py  binance_spot.py
execution/: __init__.py  base.py  live.py  paper.py
notifications/: telegram.py
portfolio/: manager.py
risk/: __init__.py  manager.py  position_sizer.py
runtime/: paper.py
storage/: __init__.py  database.py
strategy/: __init__.py  base.py  indicators.py  v1_trend_following.py
tests/: conftest.py
tests/test_backtest/: test_engine.py
tests/test_core/: test_models.py
tests/test_data/: fixtures.py  test_backtest_provider.py  test_cache.py  test_downloader.py  test_historical_loader.py  test_validator.py
tests/test_execution/: test_paper_executor.py
tests/test_risk/: test_position_sizer.py
tests/test_strategy/: test_indicators.py  test_v1_trend_following.py
