[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot-showcase"
version = "0.1.0"
description = "Crypto trading bot framework — Binance Spot, modular backtest → paper → live"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Exchange
    "python-binance>=1.0.19",

    # Data & indicators
    "pandas>=2.2",
    "numpy>=1.26",

    # Config & validation
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",

    # Logging
    "structlog>=24.1",

    # CLI
    "click>=8.1",

    # Notifications
    "python-telegram-bot>=21.0",

    # Storage
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
trading-bot = "cli.commands:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "network: tests requiring live network access (e.g. Binance API); excluded in CI",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
